charts/paperless/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: paperless
spec:
  selector:
    matchLabels:
      app: db
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: db
    spec:
      nodeSelector:
        storage: "host"
      terminationGracePeriodSeconds: 10
      containers:
        - image: postgres:17.11-alpine
          name: db
          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/postgresql/data
            - name: db-volume-new
              mountPath: /tmp/new-postgres
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d
          resources:
            limits:
              memory: 396Mi
              # cpu: 1
            requests:
              memory: 32Mi
              # cpu: 1m
      volumes:
        - name: db-volume
          hostPath:
            path: /mnt/data/paperless/postgres
            type: DirectoryOrCreate
        - name: db-volume-new
          persistentVolumeClaim:
            claimName: paperless-db
        - name: init-script
          configMap:
            name: paperless-db-init-script
