charts/paperless/paperless.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: paperless
  template:
    metadata:
      labels:
        app: paperless
    spec:
      nodeSelector:
        storage: "host"
      volumes:
        - name: paperless-volume
          hostPath:
            path: /mnt/data/paperless
            type: DirectoryOrCreate
      containers:
        - image: ghcr.io/paperless-ngx/paperless-ngx:3.0.4
          name: paperless
          resources:
            limits:
              memory: 2048Mi
              cpu: 2
            requests:
              memory: 128Mi
              cpu: 10m
          volumeMounts:
            - name: paperless-volume
              mountPath: "/usr/src/paperless/data"
              subPath: "data"
            - name: paperless-volume
              mountPath: "/usr/src/paperless/media"
              subPath: "media"
            - name: paperless-volume
              mountPath: "/usr/src/paperless/export"
              subPath: "export"
            - name: paperless-volume
              mountPath: "/usr/src/paperless/consume"
              subPath: "consume"
