charts/paperless/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: paperless
  labels:
    app: db
spec:
  ports:
    - port: 5432
      name: psql
  clusterIP: None
  selector:
    app: db
