charts/paperless/ingressroute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  namespace: paperless
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  rules:
    - host: paperless.matthiasstein.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless
                port:
                  number: 80
  tls:
    - hosts:
      - paperless.matthiasstein.net
      secretName: paperless-cert
